-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 1, 5.0.0
-
None
-
I01f3ecfbca805f4c053a75232188bd2a77fdb1f2
With -std=c++0x enabled, the following code compiles OK:
std::map<int, std::string> m {{1, "1"}, {2, "2"}};
while this doesn't:
QMap<int, QString> m {{1, "1"}, {2, "2"}};
Initializer list support is in QList and QVector. QMap shouldn't be left out.
| For Gerrit Dashboard: QTBUG-25679 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 44407,10 | Added initializer list constructors for Qt associative containers. | dev | qt/qtbase | Status: MERGED | +2 | 0 |