src/corelib/tools/qhash.cpp
@@ -924,6 +924,16 @@ void QHashData::checkSanity()
     \sa clear()
 */
 
+/*! \fn QHash::QHash(std::initializer_list<std::pair<Key,T> > list)
+    \since 5.1
+
+    Constructs a hash with a copy of each of the elements in the
+    initializer list \a list.
+
+    This function is only available if the program is being
+    compiled in C++11 mode.
+*/
+
 /*! \fn QHash::QHash(const QHash<Key, T> &other)
 
     Constructs a copy of \a other.
@@ -1979,6 +1989,16 @@ void QHashData::checkSanity()
 /*! \fn QMultiHash::QMultiHash()
 
     Constructs an empty hash.
+*/
+
+/*! \fn QMultiHash::QMultiHash(std::initializer_list<std::pair<Key,T> > list)
+    \since 5.1
+
+    Constructs a multi hash with a copy of each of the elements in the
+    initializer list \a list.
+
+    This function is only available if the program is being
+    compiled in C++11 mode.
 */
 
 /*! \fn QMultiHash::QMultiHash(const QHash<Key, T> &other)
