tests/auto/corelib/tools/qmap/tst_qmap.cpp
@@ -84,6 +84,7 @@ private slots:
 
     void insert();
     void checkMostLeftNode();
+    void initializerList();
 };
 
 typedef QMap<QString, QString> StringMap;
@@ -1127,6 +1128,35 @@ void tst_QMap::checkMostLeftNode()
     // erase last item
     map.erase(map.begin());
     sanityCheckTree(map, __LINE__);
+}
+
+void tst_QMap::initializerList()
+{
+#ifdef Q_COMPILER_INITIALIZER_LISTS
+    QMap<int, QString> map{{1, "hello"}, {2, "initializer_list"}};
+    QCOMPARE(map.count(), 2);
+    QVERIFY(map[1] == "hello");
+    QVERIFY(map[2] == "initializer_list");
+
+    QMultiMap<QString, int> multiMap{{"il", 1}, {"il", 2}, {"il", 3}};
+    QCOMPARE(multiMap.count(), 3);
+    QList<int> values = multiMap.values("il");
+    QCOMPARE(values.count(), 3);
+
+    QMap<int, int> emptyMap{};
+    QVERIFY(emptyMap.isEmpty());
+
+    QMap<char, char> emptyPairs{{}, {}};
+    QVERIFY(!emptyPairs.isEmpty());
+
+    QMultiMap<double, double> emptyMultiMap{};
+    QVERIFY(emptyMultiMap.isEmpty());
+
+    QMultiMap<float, float> emptyPairs2{{}, {}};
+    QVERIFY(!emptyPairs2.isEmpty());
+#else
+    QSKIP("Compiler doesn't support initializer lists");
+#endif
 }
 
 QTEST_APPLESS_MAIN(tst_QMap)
